--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="guestpage.html" class="btn orange waves-effect waves-red btn-large" style="color: #252525;"><img src="asset/img/icon_single.png" class="icona"> Preview Guest</a>
             </div><!--/col-->
             <div class="col-sm-6 col-xs-12 row">
-                <a href="ratingpage.html" class="btn red waves-effect waves-orange btn-large"><img src="asset/img/icon_couple.png" class=icona"> Rating Dashboard</a>
+                <a href="06.Opening Survey.html" class="btn red waves-effect waves-orange btn-large"><img src="asset/img/icon_couple.png" class="icona"> Rating Dashboard</a>
             </div><!--/col-->
             <div class="col-sm-12 col-xs-12 row">
                 <a href="resultsrating.html" class="btn green waves-effect waves-red btn-large"><img src="asset/img/icon_couple.png" class="icona"> Result of Rating <img src="asset/img/icon_couple.png" class="icona"></a>
