Fixed title of content

--- a/06.Opening Survey.html
+++ b/06.Opening Survey.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hasil Survery</title>
+    <title>JIMMY'S & WULAN'S WEDDING</title>
     <!--Let browser know website is optimized for mobile-->
         <link rel="shortcut icon" href="asset/img/LogoSurvey.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -82,7 +82,7 @@
            </div><!--.col-->
         </div><!--.col-->
         <div class="col-xs-12 center" style="padding-top: 10px;">
-            <a class="btn bluex darken-3 waves-effect waves-light next-1" href="ratingpage.html">Mulai Survey</a>
+            <a class="btn bluex darken-3 waves-effect waves-light next-1" href="ratingpage.html">Mulai Survey Semua Pelayanan</a>
         </div>
     </div><!--/.row-->
 </div><!--/contanier-->
