--- a/guestpage.html
+++ b/guestpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>JIMMY'S & WULAN'S WEDDING</title>
     <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--Import CSS-->
