--- a/resultsrating.html
+++ b/resultsrating.html
@@ -45,7 +45,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
         <div class="box box-orange box-example-movie">
             <div class="box-animasi"></div>
-            <div class="box-header">MAKANAN</div>
+            <div class="box-header">MAKANAN <span id="total_makanan"></span></div>
             <div class="box-body">
                 <div class="chart" id="chart"></div>
             </div>
