--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <link type="text/css" rel="stylesheet" href="asset/css/select.css"  media="screen,projection"/>
         <!--Import  ICON Social media-->
         <link rel="stylesheet" href="asset/css/bootlize-sosmedicon.css"/>
+        <link rel="stylesheet" href="asset/css/animate.css">
     <!--Import Js-->
         <script src="asset/js/jquery-3.2.1.min.js"></script>
         <script src="asset/js/bootlize.min.js"></script>
 </head>
-<body>
+<body class="animated bounce">
 <header>
     <div class="head-bg center">
         <img src="asset/img/brush_tab.png" alt="">
