--- a/06.Opening Survey.html
+++ b/06.Opening Survey.html
@@ -13,13 +13,14 @@
         <link type="text/css" rel="stylesheet" href="asset/css/opening-servery.css"  media="screen,projection"/>
         <!--Import  ICON Social media-->
         <link rel="stylesheet" href="css/bootlize-sosmedicon.css"/>
+        <link rel="stylesheet" href="asset/css/animate.css">
         <!--Import Google Icon Font (IF NEED )
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <!--Import Js-->
         <script src="asset/js/jquery-3.2.1.min.js"></script>
         <script src="asset/js/bootlize.min.js"></script>
 </head>
-<body>
+<body class="animated zoomInDown">
 <div class="background-primary">
 <header>
     <div class="head-bg center">
