--- a/guestpage.html
+++ b/guestpage.html
@@ -62,7 +62,7 @@
       <img src="https://www.macupdate.com/images/icons256/57746.png" alt="icon" width="140" height="140">
       <p class="brown-text" akhir>Aktivasi Kode</p>
       <p class="">Masukan kode sesuai di aplikasi untuk menampilkan guest pictures.</p>
-      <input type="text" class="" id="kode">
+      <input type="text" class="" id="kode" required>
       <button onclick="cobaInputan()" class="btn success orange darken-2">OK</button>
     </div>
   <!--    <div class="modal-footer"></div>-->
