END OF THE LINE

--- a/07.ThanksFor.html
+++ b/07.ThanksFor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hasil Survery</title>
+    <title>JIMMY'S & WULAN'S WEDDING</title>
     <!--Let browser know website is optimized for mobile-->
         <link rel="shortcut icon" href="asset/img/LogoSurvey.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -20,10 +20,10 @@
         <script src="asset/js/jquery-3.2.1.min.js"></script>
         <script src="asset/js/bootlize.min.js"></script>
 </head>
-<body class="background-primary">
+<body class="background-primary animated zoomInDown">
 <div class="background-primary">
 <header>
-    <div class="gamavr center animated zoomInDown">
+    <div class="gamavr center">
         <img src="asset/img/smiley3.png" alt="">
     </div>
 </header>
