--- a/guestpage.html
+++ b/guestpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <title>JIMMY'S & WULAN'S WEDDING</title>
@@ -48,7 +48,7 @@
       <img src="https://www.macupdate.com/images/icons256/57746.png" alt="icon" width="140" height="140">
       <p class="brown-text" akhir>Masukan Kode</p>
       <p class="">Masukan kode sesuai kode di aplikasi android untuk menampilkan guest pictures atau membuat kode baru di bawah ini.</p>
-      <input type="text" class="" id="kode" required>
+      <input type="text" class="" id="kode" required autofocus>
       <button onclick="cobaInputan()" class="btn success orange darken-2">OK</button>
     </div>
   <!--    <div class="modal-footer"></div>-->
